# Learning-Spark-Airbnb

./: .gitignore  Airbnb.py  Justfile  docker-compose.yaml  download.py  links2.csv  pyproject.toml  test_plan_city_wise.md
Tests/: test_city_wise.py  test_cleaning_utils.py  test_host_ecosystem.py  test_market_size.py
__marimo__/: Airbnb.html  Airbnb.ipynb
__marimo__/session/: Airbnb.py.json  Ajinkya.py.json
config/: spark_config.py
jobs/: city_wise.py  cleaning_utils.py  extract.py  hosts_ecosystem.py  market_size.py  properties_price_difference.py  read_data.py  revenue_projection.py  reviews.py  write.py
jobs/usecase/1/: 1.py  3.py
jobs/usecase/2/: 2.py
jobs/usecase1/: a.py  b.py  c.py
jobs/usecase2/: a.py  b.py
jobs/usercase1/: 3.py
