[project]
name = "spark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "kaleido>=1.2.0",
    "marimo>=0.18.4",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "openai>=2.15.0",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "pyarrow>=22.0.0",
    "pyspark>=4.1.0",
    "pytest-cov>=7.0.0",
    "pyzmq>=27.1.0",
    "requests>=2.32.5",
    "ruff>=0.14.10",
]

[tool.ruff]
# Allow lines to be as long as 120.
line-length = 120
